--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Mostrar SVG</title>
 </head>
 <body>
-  <object data="/bumpchart.svg" type="image/svg+xml"/>
+  <object data="bumpchart.svg" type="image/svg+xml"/>
 </body>
 </html>
