--- a/TP/index.html
+++ b/TP/index.html
@@ -22,7 +22,7 @@
       <div class="charts-container">
         <!-- Panel izquierdo - Bar Chart Race -->
         <div class="chart-panel left">
-          <h2 class="chart-title">¿Cuántas veces escuché cada canción a lo largo del tiempo?</h2>
+          <h2 class="chart-title">Flourish Chart</h2>
           <div class="chart-content">
             <div
               class="flourish-embed flourish-bar-chart-race"
@@ -38,14 +38,11 @@
               </noscript>
             </div>
           </div>
-          <div style="text-align: center; margin-top: 1rem; font-size: 0.9rem; color: var(--lime-green);">
-            Source: Spotify
-          </div>
         </div>
 
         <!-- Panel derecho - Tableau -->
         <div class="chart-panel right">
-          <h2 class="chart-title">¿Cómo evolucionaron mis reproducciones entre las 10 canciones que más escuché?</h2>
+          <h2 class="chart-title">Tableau Chart</h2>
           <div class="chart-content">
             <div
               class="tableauPlaceholder"
@@ -76,9 +73,6 @@
                 <param name="language" value="es-ES" />
               </object>
             </div>
-          </div>
-          <div style="text-align: center; margin-top: 1rem; font-size: 0.9rem; color: var(--bright-purple);">
-            Ver en Tableau Public
           </div>
         </div>
       </div>
