--- a/TP/index.html
+++ b/TP/index.html
@@ -57,7 +57,7 @@
                   <img 
                     alt='¿Como evolucionaron mis reproducciones entre las 10 canciones que más escuché? ' 
                     src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;os&#47;oscuro&#47;Hoja1&#47;1_rss.png' 
-                    style='border: none' />
+                    style='border: none' background-color: #000000;/>
                 </a>
               </noscript>
               <object 
