--- a/TP/index.html
+++ b/TP/index.html
@@ -44,62 +44,43 @@
         <div class="chart-panel right">
           <h2 class="chart-title">Tableau Chart</h2>
           <div class="chart-content" style="background-color: #8B5CF6;">
-            <div 
-              class='tableauPlaceholder' 
-              id='viz1756585910898' 
-              style="
-              position: relative;
-              background-color: #8B5CF6;
-              "
-            >
+            <div class='tableauPlaceholder' id='viz1756733516973' style='position: relative'>
               <noscript>
                 <a href='#'>
                   <img 
                     alt='¿Como evolucionaron mis reproducciones entre las 10 canciones que más escuché? ' 
-                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;os&#47;oscuro&#47;Hoja1&#47;1_rss.png' 
-                    style='border: none' background-color: #000000;/>
+                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;sp&#47;spotipy-2&#47;Hoja1&#47;1_rss.png' 
+                    style='border: none' 
+                  />
                 </a>
-              </noscript>
-              <object 
-                class='tableauViz'  
-                style='display:none;'
-              >
-                <param 
-                  name='host_url' 
-                  value='https%3A%2F%2Fpublic.tableau.com%2F' 
-                /> 
-                <param 
-                  name='embed_code_version' 
-                  value='3' 
-                /> 
-                <param 
-                  name='site_root' 
-                  value='' 
-                />
-                <param 
-                  name='name' 
-                  value='oscuro&#47;Hoja1' 
-                />
-                <param name='tabs' value='no' />
-                <param name='toolbar' value='yes' />
-                <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;os&#47;oscuro&#47;Hoja1&#47;1.png' /> 
-                <param name='animate_transition' value='yes' />
-                <param name='display_static_image' value='yes' />
-                <param name='display_spinner' value='yes' />
-                <param name='display_overlay' value='yes' />
-                <param name='display_count' value='yes' />
-                <param name='language' value='es-ES' />
-              </object>
-          </div>                
-          <script type='text/javascript'>                    
-            var divElement = document.getElementById('viz1756585910898');                    
-            var vizElement = divElement.getElementsByTagName('object')[0];                    
-            vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    
-            var scriptElement = document.createElement('script');                    
-            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
-            vizElement.parentNode.insertBefore(scriptElement, vizElement);                
-          </script>
-        </div>
+                </noscript>
+                  <object class='tableauViz'  style='display:none;'>
+                    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+                    <param name='embed_code_version' value='3' /> 
+                    <param name='site_root' value='' />
+                    <param name='name' value='spotipy-2&#47;Hoja1' />
+                    <param name='tabs' value='no' />
+                    <param name='toolbar' value='yes' />
+                    <param 
+                      name='static_image' 
+                      value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;sp&#47;spotipy-2&#47;Hoja1&#47;1.png' 
+                    /> 
+                    <param name='animate_transition' value='yes' />
+                    <param name='display_static_image' value='yes' />
+                    <param name='display_spinner' value='yes' />
+                    <param name='display_overlay' value='yes' />
+                    <param name='display_count' value='yes' />
+                    <param name='language' value='en-US' />
+                  </object></div>                
+                <script type='text/javascript'>                    
+                  var divElement = document.getElementById('viz1756733516973');                    
+                  var vizElement = divElement.getElementsByTagName('object')[0];                    
+                  vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    
+                  var scriptElement = document.createElement('script');                    
+                  scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+                  vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+                </script>                
+              </div>
       </div>
 
       <!-- Información adicional -->
